<resources>
    <string name="app_name">South Salt Rake Controller</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- MAIN UI Strings -->
    <string name="text_true">True</string>
    <string name="text_false">False</string>
    <string name="connected_text">Connected:</string>
    <string name="program_text">Program:</string>
    <string name="current_state_text">Current State:</string>
    <string name="speed_text">Speed:</string>
    <string name="time_text">Time:</string>
    <string name="gate_text">Gate:</string>
    <string name="direction_text">Direction:</string>
    <string name="select_text">Select</string>
    <string name="cancel_text">Cancel</string>


</resources>
