<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toEndBtn"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="75dp"
        android:background="#FFFFFF"
        android:clickable="true"
        app:backgroundTint="?android:attr/colorActivatedHighlight"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/srtBtn"
        app:layout_constraintStart_toStartOf="@+id/fwdBtn"
        app:layout_constraintTop_toTopOf="@+id/srtBtn"
        app:srcCompat="@android:drawable/ic_media_next"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toSrtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/toEndBtn"
        app:layout_constraintEnd_toEndOf="@+id/bckBtn"
        app:srcCompat="@android:drawable/ic_media_previous"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/srtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_play"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/srtBtn"
        app:layout_constraintTop_toTopOf="@+id/fwdBtn"
        app:srcCompat="@android:drawable/ic_media_rew"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fwdBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/srtBtn"
        app:layout_constraintStart_toEndOf="@+id/srtBtn"
        app:layout_constraintTop_toTopOf="@+id/srtBtn"
        app:srcCompat="@android:drawable/ic_media_ff"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selPrgmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@+id/srtBtn"
        app:layout_constraintTop_toTopOf="@+id/edStsBtn"
        app:srcCompat="?attr/actionModeCopyDrawable" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edStsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/srtBtn"
        app:layout_constraintTop_toBottomOf="@+id/toEndBtn"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:focusable="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="South Salt Rake Controller" />

    <TextView
        android:id="@+id/program_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/program_text"
        app:layout_constraintBottom_toTopOf="@+id/current_state_text"
        app:layout_constraintStart_toStartOf="@+id/time_text" />

    <TextView
        android:id="@+id/current_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_state_text"
        app:layout_constraintBottom_toTopOf="@+id/speed_text"
        app:layout_constraintStart_toStartOf="@+id/time_text" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/speed_text"
        app:layout_constraintBottom_toTopOf="@+id/time_text"
        app:layout_constraintStart_toStartOf="@+id/time_text" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="50dp"
        android:text="@string/time_text"
        app:layout_constraintBottom_toTopOf="@+id/bckBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gate_text"
        app:layout_constraintBottom_toBottomOf="@+id/speed_text"
        app:layout_constraintStart_toStartOf="@+id/direction_text" />

    <TextView
        android:id="@+id/direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/direction_text"
        app:layout_constraintBottom_toBottomOf="@+id/time_text"
        app:layout_constraintStart_toEndOf="@+id/time_text" />

    <TextView
        android:id="@+id/connected_val_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/program_text"
        app:layout_constraintStart_toStartOf="@+id/program_text_val"
        tools:text="connected_val" />

    <TextView
        android:id="@+id/program_text_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/current_state_val"
        app:layout_constraintTop_toTopOf="@+id/program_text"
        tools:text="Current Program" />

    <TextView
        android:id="@+id/current_state_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toEndOf="@+id/current_state_text"
        app:layout_constraintTop_toTopOf="@+id/current_state_text"
        tools:text="Current State Val" />

    <TextView
        android:id="@+id/speed_val_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/speed_text"
        app:layout_constraintTop_toTopOf="@+id/speed_text"
        tools:text="speed val" />

    <TextView
        android:id="@+id/time_val_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/speed_val_text"
        app:layout_constraintTop_toTopOf="@+id/time_text"
        tools:text="time val" />

    <TextView
        android:id="@+id/gate_val_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/direction_val_text"
        app:layout_constraintTop_toTopOf="@+id/gate_text"
        tools:text="gate val" />

    <TextView
        android:id="@+id/direction_val_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/direction_text"
        app:layout_constraintTop_toTopOf="@+id/direction_text"
        tools:text="direction val" />

    <TextView
        android:id="@+id/connected_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected_text"
        app:layout_constraintStart_toStartOf="@+id/program_text"
        app:layout_constraintTop_toTopOf="@+id/connected_val_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rfshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/connected_val_text"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_view"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selPrgmBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>